--- a/src/app.scss
+++ b/src/app.scss
@@ -119,3 +119,14 @@ forge-radio-group {
   display: grid;
   place-content: center;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
