--- a/src/app.scss
+++ b/src/app.scss
@@ -120,6 +120,10 @@ forge-radio-group {
   place-content: center;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
